--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -14,10 +14,10 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="src\CameraManager.cpp" />
     <ClCompile Include="src\DisplayManager.cpp" />
-    <ClCompile Include="src\GuiManager.cpp" />
     <ClCompile Include="src\ModelManager.cpp" />
     <ClCompile Include="src\RendererManager.cpp" />
     <ClCompile Include="src\ShaderManager.cpp" />
+    <ClCompile Include="src\UiManager.cpp" />
     <ClCompile Include="src\Utils.cpp" />
     <ClCompile Include="src\vendor\glad\src\glad.c" />
     <ClCompile Include="src\vendor\stb_image\stb_image.cpp" />
@@ -25,10 +25,10 @@
   <ItemGroup>
     <ClInclude Include="src\CameraManager.h" />
     <ClInclude Include="src\DisplayManager.h" />
-    <ClInclude Include="src\GuiManager.h" />
     <ClInclude Include="src\ModelManager.h" />
     <ClInclude Include="src\RendererManager.h" />
     <ClInclude Include="src\ShaderManager.h" />
+    <ClInclude Include="src\UiManager.h" />
     <ClInclude Include="src\Utils.h" />
     <ClInclude Include="src\vendor\glad\include\glad\glad.h" />
     <ClInclude Include="src\vendor\stb_image\stb_image.h" />
