--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -18,6 +18,7 @@
     <ClCompile Include="src\Models.cpp" />
     <ClCompile Include="src\Render.cpp" />
     <ClCompile Include="src\Shaders.cpp" />
+    <ClCompile Include="src\Terrain.cpp" />
     <ClCompile Include="src\UserInterface.cpp" />
     <ClCompile Include="src\vendor\glad\src\glad.c" />
   </ItemGroup>
