--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -21,6 +21,7 @@
     <ClCompile Include="src\Terrain.cpp" />
     <ClCompile Include="src\UserInterface.cpp" />
     <ClCompile Include="src\vendor\glad\src\glad.c" />
+    <ClCompile Include="src\vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Camera.h" />
