--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -19,6 +19,7 @@
     <ClCompile Include="src\Render.cpp" />
     <ClCompile Include="src\Shaders.cpp" />
     <ClCompile Include="src\Terrain.cpp" />
+    <ClCompile Include="src\Text.cpp" />
     <ClCompile Include="src\UserInterface.cpp" />
     <ClCompile Include="src\vendor\glad\src\glad.c" />
     <ClCompile Include="src\vendor\stb_image\stb_image.cpp" />
@@ -28,6 +29,7 @@
     <ClInclude Include="src\Controller.h" />
     <ClInclude Include="src\Display.h" />
     <ClInclude Include="ivsEngine.h" />
+    <ClInclude Include="src\Text.h" />
     <ClInclude Include="src\Models.h" />
     <ClInclude Include="src\Render.h" />
     <ClInclude Include="src\Shaders.h" />
